# tpmp-gr9b-lab4-gremlins

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  tests.yml
docs/: Home.md  _config.yaml  СпецификацияПроекта.md  ФункциональныеТребования.md
docs/Глоссарий/: Глоссарий.md
docs/ДополнительнаяСпецификация/: ДополнительнаяСпецификация.md
docs/СхемаБазыДанных/: СхемаБазыДанных.md
include/: MusicStoreDB.h  UserInterface.h
src/: MusicStoreDB.cpp  UserInterface.cpp  main.cpp
tests/: CMakeLists.txt  music_store_db_tests.cpp  thread_tests.cpp  user_interface_tests.cpp
